# READNING

./: .gitignore  .gitignore.summary.txt  CHANGELOG_MUSIC_GENERATION.md  DBEAVER_SETUP.md  Dockerfile  README.md  TEST_GUIDE.md  config.py  docker-compose.yml  index.html  init-db.sql  main.py  ollama_run.py  pyproject.toml  requirements.txt  test_health_check.py  test_mysql_connection.py  test_page_split.py  test_upload.txt
RAG/: README.md  __init__.py  emotion_chunker.py  example_usage.py  requirements.txt  retriever.py  utils.py  vector_store.py
docs/: ARCHITECTURE_PROPOSAL.md  CONFIG_EXPLAINED.md  GITIGNORE_GUIDE.md  MYSQL_SETUP.md  PAGE_PARAMETER_EXPLAINED.md  PERFORMANCE_OPTIMIZATION.md  QUICKSTART.md  REORGANIZATION_PLAN.md
frontend/: .firebaserc  Dockerfile  cors.json  firestore.rules  index.html  package-lock.json  package.json  service.md  tsconfig.app.json
gen_musics/: read
mobile/: App.tsx  README.md  app.json  package.json  tsconfig.json
routers/: __init__.py  musicgen_upload_router.py  reader_router.py
samples/: sample.txt
scrollama/: .gitignore  AUDIO-TEST-README.md  dynamic-reader.html  pyproject.toml  test-audio-scroll.html
services/: __init__.py  analyze_emotions_with_gpt.py  async_emotion_analysis.py  async_music_generation.py  chunk_processor.py  chunk_text_by_emotion.py  clean_json.py  ebooks2text.py  emotion_analysis_service.py  error_handler.py  find_turning_points_in_text.py  firestore_service.py  get_emotion_analysis_prompt.py  langgraph_workflow.py  merge_service.py  model_manager.py  musicgen_service.py  mysql_service.py  types.py  (+6 more)
(+39 files in other folders)
